--- a/_includes/header.html
+++ b/_includes/header.html
@@ -96,6 +96,13 @@
               {% endfor -%}
               {%- if site.enable_darkmode %}
 
+              <!-- CV -->
+              <li class="nav-item">
+                <a class="nav-link" href="https://drive.google.com/file/d/1uImCY8_rdmqiEhx-jYsw_jpJu8G7r9nx/view?usp=sharing">CV
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+
               <!-- Toogle theme mode -->
               <li class="toggle-container">
                 <button id="light-toggle" title="Change theme">
